--- a/requirements.txt
+++ b/requirements.txt
@@ -19,36 +19,49 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
 distro==1.9.0
 Django==4.2.3
 djangorestframework==3.15.0
 dnspython==1.16.0
 et-xmlfile==1.1.0
 exceptiongroup==1.1.1
+filelock==3.15.4
 Flask==3.0.3
+Flask-Cors==4.0.1
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 folium==0.16.0
+fonttools==4.53.1
 frozenlist==1.3.3
+fsspec==2024.6.1
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
+huggingface-hub==0.24.5
 idna==3.4
 importlib_metadata==7.1.0
+importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
+joblib==1.4.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.1
 MouseInfo==0.1.3
 msgspec==0.18.6
 multidict==6.0.4
 numpy==1.24.3
-openai==1.34.0
+openai==1.39.0
 openpyxl==3.1.2
 outcome==1.2.0
+packaging==24.1
 pandas==2.0.1
 pefile==2023.2.7
 Pillow==9.5.0
+plotly==5.23.0
 psycopg2==2.9.9
 PyAutoGUI==0.9.53
 pycparser==2.21
@@ -60,6 +73,7 @@ pyinstaller-hooks-contrib==2023.2
 PyJWT==2.8.0
 pymongo==4.7.3
 PyMsgBox==1.0.9
+pyparsing==3.1.2
 pyperclip==1.8.2
 PyRect==0.2.0
 PyScreeze==0.1.28
@@ -73,8 +87,13 @@ python-telegram-bot==21.3
 pytweening==1.0.5
 pytz==2023.3
 pywin32-ctypes==0.2.0
+PyYAML==6.0.1
 redis==5.0.6
+regex==2024.7.24
 requests==2.29.0
+safetensors==0.4.3
+scikit-learn==1.5.1
+scipy==1.13.1
 selenium==4.8.3
 six==1.16.0
 sniffio==1.3.0
@@ -83,8 +102,13 @@ soupsieve==2.4.1
 SQLAlchemy==2.0.31
 sqlparse==0.4.4
 telebot==0.0.5
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+tokenizers==0.19.1
 tornado==6.1
 tqdm==4.65.0
+transformers==4.43.3
 trio==0.22.0
 trio-websocket==0.10.2
 twilio==9.0.5
