--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ distro==1.9.0
 dnspython==2.6.1
 exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-Cors==4.0.1
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.5
@@ -37,7 +38,7 @@ tqdm==4.66.5
 twilio==9.2.3
 typing_extensions==4.12.2
 urllib3==2.2.2
+waitress==3.0.0
 Werkzeug==3.0.3
 yarl==1.9.4
 zipp==3.19.2
-flask_cors==4.0.1
